--- a/insta/templates/registration/base.html
+++ b/insta/templates/registration/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    {% include "navbar.html" %} {% block content %} {%endblock%} {% block scripts %}
+    {% include 'insta/navbar.html' %}{% block content %} {%endblock%} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="{% static 'js/index.js'%}"></script>
