--- a/insta/templates/the-gram/profile.html
+++ b/insta/templates/the-gram/profile.html
@@ -1,47 +1,72 @@
-{%extends 'the-gram/base.html'%} {% load static %} {% block content %} {{ block.super }}
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-4">
-            <h4>@{{user.username}}<br> Bio: <br>
-                <p>{{user.profile.bio}}</p>
-            </h4>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-sm btn-outline-info" data-toggle="modal" data-target="#exampleModal">
-  Edit Profile
-</button>
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="background-color: blanchedalmond;">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">{{user.username}}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-                        </div>
-                        <div class="modal-body">
-                            <form action="" id="form" method="post" enctype="multipart/form-data" class="form-control">
-                                {% csrf_token %} {{u_form}} {{p_form}}
-                                <button type="submit" class="btn btn-sm btn-info">Update</button>
-                            </form>
+{% extends 'the-gram/layout.html' %} {% load crispy_forms_tags %} {% block content %}
+<div class="container" style="margin-top:8%">
+    <div class="content-section">
+        <div class="media">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-3">
+                        <img class="rounded-circle account-img" src="{{ user.profile.profile_picture.url }}" style="width: 50%; height: 70%;">
+                    </div>
+                    <div class="col-md-6 mt-3">
+                        <div class="media-body">
+                            <div class="account-heading"><span class="mr-3 text-secondary username">{{ user.username }}</span>
+                                <a class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal" data-target=".bd-example-modal-md"><strong>Edit Profile</strong></a>
+                                <a class="mt-3" data-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3" id="cog"></i></a>
+                            </div>
+
+                            <div class="post-details mt-3 mb-3">
+                                <span class="mr-5"><strong>{{images.count}}</strong> Posts</span>
+                                <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers</span>
+                                <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span>
+                            </div>
+                            <h5>{{ user.profile.name }}</h5>
+                            <p class="text-secondary">{{ user.profile.bio }}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <img src="{{ user.profile.profile_photo.url}}" style="border-radius: 50%; width: 100px; height: 100px;" alt="profile photo">
+        <div class="modal fade bd-example-modal-sm" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <a class="D-block mx-auto" href="">Change Password</a>
+                        <hr>
+                        <a class="D-block mx-auto" href="{% url 'logout' %}">Log Out</a>
+                        <hr>
+                        <a class="D-block mx-auto" href="" data-dismiss="modal">Close</a>
+                    </div>
+
+                </div>
+            </div>
         </div>
-        <div class="col-md-4"></div>
+        <div class="modal fade bd-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md ">
+                <div class="modal-content">
+                    <form action="" method="post" novalidate enctype="multipart/form-data" class="mr-4 mt-4 ml-4 mb-4">
+                        {% csrf_token%} {{ user_form|crispy}} {{ prof_form|crispy}}
+                        <button type="submit" class="btn btn-primary btn-sm"> Update Profile</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <hr>
-</div>
-<div class="card-columns container-fluid">
-    {% for image in insta %} {% if image.author == user %}
-    <div class="card">
-        <img src="{{image.photo.url}}" height="300vh" width="50%" alt="my images">
+    <hr class="mt-4">
+    <div class="card-columns">
+        {% for image in images %}
+        <div class="card">
+            <div class="card-body">
+                <img src="{{image.image.url}}" alt="{{image.caption}}" class="card-img">
+                <p id="overlay" class="text">
+                    <i class="fas fa-heart" style="color:white; font-size: 18"></i>
+                    <span style="color: white">{{image.likes.count}}</span>
+                    <i class="fas fa-comment ml-4" style="color: white"></i> <span style="color: white">{{image.comments.count}}</span></p>
+
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    {% endif %} {% endfor %}
 </div>
-</div>
+
 {% endblock %}
