fix login errors and add images

--- a/insta/templates/the-gram/index.html
+++ b/insta/templates/the-gram/index.html
@@ -45,8 +45,7 @@
                 </div>
                 <div class="iconic ml-2 ">
                     <button class="btn btn-sm " type="submit " name="image_id " value="{{image.id}} ">
-                        <a href="{% url 'comment' image.id %} "><i class="far fa-heart hearticon mx-auto "
-                                                                  aria-hidden="true " style=" "></i></a>
+                        <a href="{% url 'comment' image.id %} "><i class="far fa-heart hearticon mx-auto "aria-hidden="true "></i></a>
                     </button>
                     <button class="btn btn-sm " type="submit "><a href="{% url 'comment' image.id %} "><i
                             class="far fa-comment hearticon mx-auto " aria-hidden="true "></i>
@@ -69,7 +68,7 @@
         <div class="col-md-4 mt-4 userinfo ">
             <div class="row ">
                 <div class="col-md-3 ml-2 ">
-                    <img class="rounded-circle user-img " src="{{ user.profile.profile_picture.url }} " style="width: 50%;">
+                    <img class="rounded-circle user-img " src="{{ user.profile.profile_picture.url }} " style="width: 50%; height: 70%;">
                 </div>
                 <div class="col-md-6 mt-4 user-detail ">
                     <span class=" text-secondary "><a
