--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -3,13 +3,11 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-4">
-            <img src="{% static 'images/insta6.png' %}" alt="" width="100%" height="100%" id="insta">
+            <img src="/static/image/insta.png" alt="" width="100%" height="100%">
         </div>
         <div class="col-md-4 mt-4">
             <div class="card ">
-                <div class="card-title mt-4">
-                    <img src="{% static 'images/insta5.png' %}" alt="" width="40%" class="D-block mx-auto">
-                </div>
+
                 <div class="card-body mb-3 mr-3 ml-3">
                     <form action="" method="post" novalidate>
                         {% csrf_token%} {{ form|crispy}}
@@ -21,19 +19,6 @@
             <div class="card mt-2">
                 <div class="card-body mt-3 mb-3 mr-2 ml-4">
                     Don't have an account? <a href="{% url 'signup' %}">Sign up</a>
-                </div>
-            </div>
-            <div container>
-                <p class="text-center mt-4">Get the app</p>
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5 mb-2">
-                        <img src="{% static 'images/insta2.png' %}" alt="" width="100%" class="download">
-                    </div>
-                    <div class="col-md-5 mb-2">
-                        <img src="{% static 'images/insta1.png' %}" alt="" width="100%" class="download">
-                    </div>
-                    <div class="col-md-1"></div>
                 </div>
             </div>
         </div>
