--- a/insta/templates/the-gram/like_section.html
+++ b/insta/templates/the-gram/like_section.html
@@ -4,7 +4,7 @@
             class="fa fa-heart hearticon mx-auto" aria-hidden="true" style="color:red"></i></a>
     </button> {% else %}
     <button class="btn btn-sm" type="submit" id="like" name="image_id" value="{{image.id}}"><i
-            class="far fa-heart hearticon mx-auto" aria-hidden="true" style=""></i>
+            class="far fa-heart hearticon mx-auto" aria-hidden="true"></i>
     </button> {% endif %}
 </form>
 <span>{{ total_likes }} like{{ total_likes | pluralize}}</span>
