--- a/insta/templates/the-gram/user_profile.html
+++ b/insta/templates/the-gram/user_profile.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-3">
-                        <img class="rounded-circle account-img" src="{{ user_prof.profile.profile_picture.url }}">
+                        <img class="rounded-circle account-img" src="{{ user_prof.profile.profile_picture.url }}" style="width: 50%; height: 80%;">
                     </div>
                     <div class="col-md-6 mt-3">
                         <div class="media-body">
