--- a/insta/templates/the-gram/search.html
+++ b/insta/templates/the-gram/search.html
@@ -5,7 +5,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             {% if results %}
-            <h5 class="text-center">Found {{ results|length }} user{{ results|pluralize }}</h5>
+            <h5 class="text-center">Found {{ results|length }} instagramer{{ results|pluralize }}</h5>
             {% else %}
             <h5 class="text-center"> Found 0 user with username <strong>{{message}}</strong></h5>
 
