--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144351462-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144351462-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -11,7 +11,7 @@
         }
         gtag('js', new Date());
         gtag('config', 'UA-144351462-1');
-    </script>
+    </script> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
