--- a/insta/templates/the-gram/profile.html
+++ b/insta/templates/the-gram/profile.html
@@ -1,4 +1,4 @@
-{% extends 'the-gram/layout.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'the-gram/base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="container" style="margin-top:8%">
     <div class="content-section">
         <div class="media">
