--- a/insta/templates/the-gram/search.html
+++ b/insta/templates/the-gram/search.html
@@ -1,4 +1,4 @@
-{% extends 'the-gram/layout.html' %} {% block content %}
+{% extends 'the-gram/base.html' %} {% block content %}
 
 <div class="container" style="margin-top:7%">
     <div class="row">
