--- a/insta/templates/the-gram/single_post.html
+++ b/insta/templates/the-gram/single_post.html
@@ -1,4 +1,4 @@
-{% extends 'the-gram/layout.html' %} {% load static %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'the-gram/base.html' %} {% load static %} {% load crispy_forms_tags %} {% block content %}
 <div class="container" style="margin-top:7%;">
     <div class="card">
         <div class="row">
