--- a/insta/templates/django_registration/registration_form.html
+++ b/insta/templates/django_registration/registration_form.html
@@ -1,4 +1,4 @@
-{% extends 'the-gram/base.html' %} {% load crispy_forms_tags %} {% block content %} {% load static %}
+ {% load crispy_forms_tags %} {% block content %} {% load static %}
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-4"></div>
