--- a/insta/templates/the-gram/navbar.html
+++ b/insta/templates/the-gram/navbar.html
@@ -9,7 +9,7 @@
         <span class="pull-right">
             <div class="instaicon disc"></div>
             <div class="instaicon like"></div>
-            <a href="{% url 'profile' user.username %}" class="instaicon pers"></a>
+            <a href="/profile/{{user.uername}}" class="instaicon pers"></a>
         </span>
     </nav>
 </div>
